[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemy_Test/Sprites/Skeleton Warrior.png" type="Texture" id=1]
[ext_resource path="res://Enemy_Test/Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Enemy_Test/Sprites/OverSprite.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 16.56

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="Enemy" type="Area2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="OverSprite" type="Sprite" parent="."]
position = Vector2( -4.66667, 18.3333 )
scale = Vector2( 0.481481, 0.12963 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.872, 1.28 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Idle"
frame = 5
playing = true

[connection signal="input_event" from="." to="." method="_on_Enemy_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Enemy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Enemy_mouse_exited"]
